@@ -1,4 +1,5 @@
 HEAD
+	+ Implement _preModifyUser on LdapUserBase
 	+ Fixed regression in LDAP info page for external AD mode
 3.2.7
 	+ Print slave-sync output to zentyal.log instead of stdout
